--- a/build.gradle
+++ b/build.gradle
@@ -9,20 +9,16 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-
     // Dependency setup for Groovy 2.5
-    //compile 'org.codehaus.groovy:groovy-all:2.5.9'
-    //testCompile "org.spockframework:spock-core:1.2-groovy-2.5"
+    compile 'org.codehaus.groovy:groovy:2.5.9'
+    testCompile "org.spockframework:spock-core:1.2-groovy-2.5"
 
-    // Dependency setup for Groovy 2.4
-    compile 'org.codehaus.groovy:groovy-all:2.4.13'
-    testCompile "org.spockframework:spock-core:1.2-groovy-2.4"
+    testCompile "ch.qos.logback:logback-classic:1+"
 
-    compile "net.sf.nomin:nomin:1.1.7"
+    compile "net.sf.nomin:nomin:1.2"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
